feat: add security in swagger
