# src/infra/http/express/client-route/routeClient.ts
@@ -1,4 +1,5 @@
 import { Router } from "express"
+import { authentication } from "../middleware"
 import ExpressAdapter from "../../../../adapter/express/ExpressAdapter";
 import createClientController from "../../../../controller/client/createClientController";
 import DeleteClientController from "../../../../controller/client/deleteController";
@@ -8,10 +9,10 @@ import UpdateClientController from "../../../../controller/client/updateControll
 
 const router = Router();
 
-router.post("/client/create", ExpressAdapter.create(createClientController.createClient));
-router.get("/client/show", ExpressAdapter.create(GetClientController.getClient));
-router.get("/client/:id", ExpressAdapter.create(GetOneClientController.getOneClient));
-router.put("/client/update", ExpressAdapter.create(UpdateClientController.updateClient));
-router.delete("/client/delete/:id", ExpressAdapter.create(DeleteClientController.deleteClient));
+router.post("/client/create",authentication, ExpressAdapter.create(createClientController.createClient, 201));
+router.get("/client/show",authentication, ExpressAdapter.create(GetClientController.getClient));
+router.get("/client/:id",authentication, ExpressAdapter.create(GetOneClientController.getOneClient));
+router.put("/client/update",authentication, ExpressAdapter.create(UpdateClientController.updateClient));
+router.delete("/client/delete/:id",authentication, ExpressAdapter.create(DeleteClientController.deleteClient));
 
 export default router
