# src/infra/http/express/client-route/swagger.json
@@ -3,8 +3,22 @@
     "info": {
       "title": "API Exemple",
       "description": "Documentation from Clients",
+      "termsOfService": "http://localhost:3000",
+      "contact": {
+        "email": "ciclano@gmail.com"
+      },
       "version": "1.0.0"
     },
+    "servers": [
+      {
+        "url": "http://localhost:3000",
+        "description": "API de Desenvolvimento"
+      },
+      {
+        "url": "http://meudominio.com",
+        "description": "API de Produção"
+      }
+    ],
     "basePath": "/",  
     "paths": {
   
@@ -13,6 +27,7 @@
           "tags": ["Client"],
           "description": "Cria um cliente",
           "summary": "Adiciona um cliente",
+          "security": [{"beareAuth": []}],
           "operationId": "addClient",
           "requestBody": {
             "content": {
@@ -46,6 +61,9 @@
           },
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
         }
@@ -56,6 +74,7 @@
           "description": "Rota que busca cliente pelo id",
           "summary": "Busca de um cliente pelo id",
           "tags": ["Client"],
+          "security": [{"beareAuth": []}],
           "parameters": [
             {
               "name": "id",
@@ -86,6 +105,7 @@
           "description": "Rota que busca todos cliente",
           "summary": "Busca de todos cliente",
           "tags": ["Client"],
+          "security": [{"beareAuth": []}],
           "operationId": "getClientById",
           "responses": {
             "200": {
@@ -110,6 +130,7 @@
           "description": "Rota que atualiza um cliente",
           "summary": "Atualiza um cliente",
           "tags": ["Client"],
+          "security": [{"beareAuth": []}],
           "operationId": "getClient",
           "requestBody": {
             "content": {
@@ -161,6 +182,7 @@
           "description": "Rota que deleta um cliente pelo id",
           "summary": "Deleta um cliente pelo id",
           "tags": ["Client"],
+          "security": [{"beareAuth": []}],
           "parameters": [
             {
               "name": "id",
@@ -198,6 +220,13 @@
                     }
                 }
             }
+        },
+        "securitySchemes" : {
+          "beareAuth": {
+            "type": "http",
+            "scheme": "bearer",
+            "bearerFormat": "JWT"
+          }
         }
     }
 
